--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,15 +83,15 @@ services:
     env_file:
       - .env
 
-  scraper_init:
-    build: .
-    command: sh -c "sleep 10 && celery -A celery_app call scraper.tasks.run_polwro_scraper"
-    depends_on:
-      - app
-      - celery_worker
-      - mongodb
-    networks:
-      - scraper_network
+  # scraper_init:
+  #   build: .
+  #   command: sh -c "sleep 10 && celery -A celery_app call scraper.tasks.run_polwro_scraper"
+  #   depends_on:
+  #     - app
+  #     - celery_worker
+  #     - mongodb
+  #   networks:
+  #     - scraper_network
 
   # Monitoring services
   prometheus:
