Added training and model save

--- a/docker-compose-redash.yml
+++ b/docker-compose-redash.yml
@@ -12,7 +12,7 @@ x-redash-service: &redash-service
     REDASH_LOG_LEVEL: DEBUG
     REDASH_COOKIE_SECRET: 5fa8d71f0203866ae9e8099c3a76cabd89cf7b2fa51ae39b4ad745125e7e1dfa
     REDASH_SECRET_KEY: 5fa8d71f0203866ae9e8099c3a76cabd89cf7b2fa51ae39b4ad745125e7e1dfa
-  restart: always
+  # restart: always
 services:
   server:
     <<: *redash-service
