feat: Update Helm templates and values for allContainers support; modify port forwarding in Makefile

--- a/helm/polwro/templates/celery-beat.yaml
+++ b/helm/polwro/templates/celery-beat.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.celeryBeat }}
+{{- if .Values.allContainers }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -49,3 +50,4 @@ spec:
             path: {{ tpl .Values.celeryCommon.volumeRoot . }}/data
             type: DirectoryOrCreate
 {{- end }}
+{{- end}}
